[package]
name = "tmain"
authors = ["Martijn Gribnau <garm@ilumeo.com>"]
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
tmonitor = { path = "../tmonitor" }
trunner = { path = "../trunner" }

rand = "0.10.0"
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
