[package]
name = "tmonitor"
authors = ["Martijn Gribnau <garm@ilumeo.com>"]
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
trunner = { path = "../trunner" }

axum = { version = "0.8", features = ["tokio"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { version = "0.1.18", features = ["full"] }
tracing = { workspace = true }